--- a/app/src/main/res/values/array_apps.xml
+++ b/app/src/main/res/values/array_apps.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="apps">
-        <item></item>
+        <item>Uber</item>
+        <item>Didi</item>
+        <item>inDrive</item>
+        <item>Lyft</item>
+        <item>Cabify</item>
     </string-array>
 </resources>
