--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -8,8 +8,8 @@
 
     <Spinner
         android:id="@+id/sp_apps"
-        android:layout_width="295dp"
-        android:layout_height="42dp"
+        android:layout_width="304dp"
+        android:layout_height="51dp"
         android:layout_marginStart="43dp"
         android:layout_marginTop="9dp"
         android:layout_marginEnd="66dp"
@@ -109,6 +109,7 @@
         android:layout_marginTop="648dp"
         android:layout_marginEnd="153dp"
         android:layout_marginBottom="35dp"
+        android:onClick="guardar_res"
         android:text="guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,19 +134,19 @@
             android:id="@+id/radioButton4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Hombre" />
 
         <RadioButton
             android:id="@+id/radioButton5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Mujer" />
 
         <RadioButton
             android:id="@+id/radioButton6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Otro/No especificar" />
     </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
