--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -62,8 +62,8 @@
         android:layout_marginTop="419dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="264dp"
-        android:onClick="login"
-        android:text="iniciar"
+        android:onClick="registrarUsuario"
+        android:text="guardar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
