--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -8,8 +8,8 @@
 
     <Spinner
         android:id="@+id/sp_ordenar"
-        android:layout_width="307dp"
-        android:layout_height="41dp"
+        android:layout_width="305dp"
+        android:layout_height="52dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="52dp"
@@ -18,36 +18,58 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/editTextTextMultiLine3"
         android:layout_width="298dp"
         android:layout_height="117dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="194dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginBottom="420dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="193dp" />
-
-    <EditText
-        android:id="@+id/editTextTextMultiLine4"
-        android:layout_width="298dp"
-        android:layout_height="117dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="340dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/editTextTextMultiLine5"
         android:layout_width="298dp"
         android:layout_height="117dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="486dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginBottom="128dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="486dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <EditText
+        android:id="@+id/editTextTextMultiLine4"
+        android:layout_width="298dp"
+        android:layout_height="117dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginBottom="274dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
