--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -6,149 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".inicio">
 
-    <Spinner
-        android:id="@+id/sp_apps"
-        android:layout_width="304dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginBottom="596dp"
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="238dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="331dp"
+        android:layout_marginEnd="87dp"
+        android:layout_marginBottom="332dp"
+        android:backgroundTint="@color/teal_700"
+        android:text="nueva reseña"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="336dp"
-        android:layout_marginBottom="484dp"
-        android:text="Conductor"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sp_apps"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="336dp"
-        android:layout_marginBottom="648dp"
-        android:text="Apps"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.038"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="225dp"
-        android:layout_marginBottom="260dp"
-        android:text="Reseña"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-
-    <EditText
-        android:id="@+id/et_reseña"
-        android:layout_width="304dp"
-        android:layout_height="155dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="61dp"
-        android:layout_marginBottom="25dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <EditText
-        android:id="@+id/et_nom_conductor"
-        android:layout_width="298dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginBottom="476dp"
-        android:ems="10"
-        android:hint="Nombre del conductor"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="153dp"
-        android:layout_marginTop="648dp"
-        android:layout_marginEnd="153dp"
-        android:layout_marginBottom="35dp"
-        android:onClick="guardar_res"
-        android:text="guardar"
+        android:id="@+id/button6"
+        android:layout_width="238dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="233dp"
+        android:layout_marginEnd="87dp"
+        android:layout_marginBottom="430dp"
+        android:backgroundTint="@color/teal_200"
+        android:text="ver reseñas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="313dp"
-        android:layout_height="148dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="326dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_nom_conductor">
-
-        <RadioButton
-            android:id="@+id/radioButton4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hombre" />
-
-        <RadioButton
-            android:id="@+id/radioButton5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Mujer" />
-
-        <RadioButton
-            android:id="@+id/radioButton6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Otro/No especificar" />
-    </RadioGroup>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
