--- a/app/src/main/res/layout/activity_nueva_review.xml
+++ b/app/src/main/res/layout/activity_nueva_review.xml
@@ -111,6 +111,7 @@
         android:layout_marginTop="648dp"
         android:layout_marginEnd="153dp"
         android:layout_marginBottom="35dp"
+        android:backgroundTint="@color/teal_200"
         android:onClick="guardar_res"
         android:text="guardar"
         app:layout_constraintBottom_toBottomOf="parent"
