--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="179dp"
         android:layout_marginBottom="602dp"
         android:text="Registrarse"
-        android:textColor="#0000cc"
+        android:textColor="@color/teal_700"
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +62,7 @@
         android:layout_marginTop="419dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="264dp"
+        android:backgroundTint="@color/teal_200"
         android:onClick="registrarUsuario"
         android:text="guardar"
         app:layout_constraintBottom_toBottomOf="parent"
