--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="87dp"
         android:layout_marginBottom="332dp"
         android:backgroundTint="@color/teal_700"
+        android:onClick="nva_res"
         android:text="nueva reseña"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +31,7 @@
         android:layout_marginEnd="87dp"
         android:layout_marginBottom="430dp"
         android:backgroundTint="@color/teal_200"
+        android:onClick="ver_res"
         android:text="ver reseñas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
